# MECH-M-DUAL-2-MLB

./: .gitignore  .zenodo.json  CITATION.cff  README.md  _quarto.yml  index.html  index.qmd  intro.html  intro.qmd  pyproject.toml  references.bib  references.html  release.sh  robots.txt  search.json  sitemap.xml  summary.html  summary.qmd
.github/workflows/: publish.yml
_assets/appendices/: appendices.excalidraw
_assets/clustering/: clustering.excalidraw
_assets/data/: data.excalidraw
_assets/nn/: nn.excalidraw
appendices/: explanations.html  explanations.qmd  keras.html  keras.qmd
clustering/: index.html  index.qmd  semisupervised.html  semisupervised.qmd  supervised.html  supervised.qmd  unsupervised.html  unsupervised.qmd
data/: code.html  code.qmd  data.html  data.qmd  index.html  index.qmd  model.html  model.qmd
nn/: augmentation.html  augmentation.qmd  autoencoder.html  autoencoder.qmd  challenges.html  challenges.qmd  cnn.html  cnn.qmd  data.html  data.qmd  index.html  index.qmd  nn.html  nn.qmd  transfer.html  transfer.qmd
site_libs/bootstrap/: bootstrap-1e48ba61bbb28ed409cc66b93a2cf6ae.min.css  bootstrap-27b4a279de94591399be0375ebb537c1.min.css  bootstrap-396a8ca7a22f3fd420d3bfa4e06e1479.min.css  bootstrap-60c12469a02addc16ece3c92f73823bb.min.css  bootstrap-691ee51105b2b265a9f2acf218356880.min.css  bootstrap-91269faae8b05e90b72f852b441977e9.min.css  bootstrap-b4aa0fe64f76180af77d02d6d1f24540.min.css  bootstrap-c699154ef242142b43c34bd36ab18235.min.css  bootstrap-d3d4d1eae387a6e9deb6a52c96ceddf1.min.css  (+9 more)
